--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>The Seven Wonders of the Ancient World</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
+
+  <header>
+    <h1>The Seven Wonders of the Ancient World</h1>
+    <h2>Remarkable constructions of classical antiquity—lost in time</h2>
+    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+  </header>
   <body>
 
   </body>
