--- a/index.html
+++ b/index.html
@@ -8,10 +8,42 @@
 
   <header>
     <h1>The Seven Wonders of the Ancient World</h1>
+    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
     <h2>Remarkable constructions of classical antiquity—lost in time</h2>
     <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
   </header>
+
   <body>
+    <figure>
+      <img src="images/temple-of-artemis.jpg" alt="#">
+      <figcaption>
+        <h2>Temple of Artemis</h2>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
+        </dl>
+      </figcaption>
+    </figure>
+
+    <figure>
+      <img src="images/colossus-of-rhodes.jpg" alt="#">
+      <figcaption>
+        <h2>Colossus of Rhodes</h2>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>292–280 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Rhodes, Greece</dd>
+        </dl>
+      </figcaption>
+    </figure>
+
 
   </body>
 </html>
