Finish Basic html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
       </figcaption>
     </figure>
 
+        <figure>
+          <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
+          <figcaption>
+            <h2>Hanging Garden of Babylon</h2>
+            <dl>
+              <dt>Construction:</dt>
+              <dd>Circa 600 BC</dd>
+              <dt>Builders:</dt>
+              <dd>Babylonians</dd>
+              <dt>Location:</dt>
+              <dd>Nineveh, Iraq</dd>
+            </dl>
+          </figcaption>
+        </figure>
 
   </body>
 </html>
