--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
-  <header>
-    <h1>The Seven Wonders of the Ancient World</h1>
-    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
-    <h2>Remarkable constructions of classical antiquity—lost in time</h2>
-    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-  </header>
-
   <body>
+
+
+    <header>
+      <h1>The Seven Wonders of the Ancient World</h1>
+      <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
+      <h2>Remarkable constructions of classical antiquity—lost in time</h2>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </header>
+
     <figure>
       <img src="images/temple-of-artemis.jpg" alt="#">
       <figcaption>
@@ -47,7 +49,7 @@
         <figure>
           <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
           <figcaption>
-            <h2>Hanging Garden of Babylon</h2>
+            <h2>Gardens of Babylon</h2>
             <dl>
               <dt>Construction:</dt>
               <dd>Circa 600 BC</dd>
