--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>The Seven Wonders of the Ancient World</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>The Seven Wonders of the Ancient World</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
+</head>
 
-  <body>
+<body>
 
+  <header role="banner">
+    <h1>The Seven Wonders of the Ancient World</h1>
+    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
+    <h2>Remarkable constructions of classical antiquity—lost in time</h2>
+    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+  </header>
 
-    <header>
-      <h1>The Seven Wonders of the Ancient World</h1>
-      <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
-      <h2>Remarkable constructions of classical antiquity—lost in time</h2>
-      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-    </header>
+  <main role="main">
 
     <figure>
       <img src="images/temple-of-artemis.jpg" alt="#">
@@ -46,20 +49,22 @@
       </figcaption>
     </figure>
 
-        <figure>
-          <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
-          <figcaption>
-            <h2>Gardens of Babylon</h2>
-            <dl>
-              <dt>Construction:</dt>
-              <dd>Circa 600 BC</dd>
-              <dt>Builders:</dt>
-              <dd>Babylonians</dd>
-              <dt>Location:</dt>
-              <dd>Nineveh, Iraq</dd>
-            </dl>
-          </figcaption>
-        </figure>
+    <figure>
+      <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
+      <figcaption>
+        <h2>Gardens of Babylon</h2>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Babylonians</dd>
+          <dt>Location:</dt>
+          <dd>Nineveh, Iraq</dd>
+        </dl>
+      </figcaption>
+    </figure>
 
-  </body>
+  </main>
+
+</body>
 </html>
