--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
   <header role="banner">
     <h1>The Seven Wonders of the Ancient World</h1>
     <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
-    <h2>Remarkable constructions of classical antiquity—lost in time</h2>
-    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    <div class="header words">
+      <h2>Remarkable constructions of classical antiquity—lost in time</h2>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </div>
   </header>
 
   <main role="main">
 
-    <figure>
+    <figure class="artemis">
       <img src="images/temple-of-artemis.jpg" alt="#">
       <figcaption>
         <h2>Temple of Artemis</h2>
@@ -34,7 +36,7 @@
       </figcaption>
     </figure>
 
-    <figure>
+    <figure class="rhodes">
       <img src="images/colossus-of-rhodes.jpg" alt="#">
       <figcaption>
         <h2>Colossus of Rhodes</h2>
@@ -49,7 +51,7 @@
       </figcaption>
     </figure>
 
-    <figure>
+    <figure class="babylon">
       <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
       <figcaption>
         <h2>Gardens of Babylon</h2>
