--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header role="banner">
     <h1>The Seven Wonders of the Ancient World</h1>
     <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
-    <div class="header words">
+    <div class="words">
       <h2>Remarkable constructions of classical antiquity—lost in time</h2>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </div>
