--- a/index.html
+++ b/index.html
@@ -2,71 +2,63 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>The Seven Wonders of the Ancient World</title>
+  <title>Ancient World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/main.css">
+  <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
 </head>
-
-<body>
-
-  <header role="banner">
+  <header>
     <h1>The Seven Wonders of the Ancient World</h1>
-    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="#">
-    <div class="words">
-      <h2>Remarkable constructions of classical antiquity—lost in time</h2>
+    <img class="banner" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient city">
+    <div class="text">
+      <h2 class="time">Remarkable constructions of classical antiquity—lost in time</h2>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </div>
   </header>
-
-  <main role="main">
-
-    <figure class="artemis">
-      <img src="images/temple-of-artemis.jpg" alt="#">
-      <figcaption>
-        <h2>Temple of Artemis</h2>
-        <dl>
-          <dt>Construction:</dt>
-          <dd>Circa 550 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Selçuk, Turkey</dd>
-        </dl>
-      </figcaption>
-    </figure>
-
-    <figure class="rhodes">
-      <img src="images/colossus-of-rhodes.jpg" alt="#">
-      <figcaption>
-        <h2>Colossus of Rhodes</h2>
-        <dl>
-          <dt>Construction:</dt>
-          <dd>292–280 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Rhodes, Greece</dd>
-        </dl>
-      </figcaption>
-    </figure>
-
-    <figure class="babylon">
-      <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
-      <figcaption>
-        <h2>Gardens of Babylon</h2>
-        <dl>
-          <dt>Construction:</dt>
-          <dd>Circa 600 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Babylonians</dd>
-          <dt>Location:</dt>
-          <dd>Nineveh, Iraq</dd>
-        </dl>
-      </figcaption>
-    </figure>
-
+<body>
+  <main>
+  <figure class="temple">
+    <img src="images/temple-of-artemis.jpg" alt="#">
+    <figcaption>
+      <h2>Temple of Artemis</h2>
+      <dl>
+        <dt>Construction:</dt>
+        <dd>Circa 550 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Greeks</dd>
+        <dt>Location:</dt>
+        <dd>Selçuk, Turkey</dd>
+      </dl>
+    </figcaption>
+  </figure>
+  <figure class="colossus">
+    <img src="images/colossus-of-rhodes.jpg" alt="#">
+    <figcaption>
+      <h2>Colossus of Rhodes</h2>
+      <dl>
+        <dt>Construction:</dt>
+        <dd>292–280 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Greeks</dd>
+        <dt>Location:</dt>
+        <dd>Rhodes, Greece</dd>
+      </dl>
+    </figcaption>
+  </figure>
+  <figure class="gardens">
+    <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
+    <figcaption>
+      <h2>Gardens of Babylon</h2>
+      <dl>
+        <dt>Construction:</dt>
+        <dd>Circa 600 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Babylonians</dd>
+        <dt>Location:</dt>
+        <dd>Nineveh, Iraq</dd>
+      </dl>
+    </figcaption>
+  </figure>
   </main>
-
 </body>
 </html>
