--- a/index.html
+++ b/index.html
@@ -7,58 +7,65 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
 </head>
-  <header>
-    <h1>The Seven Wonders of the Ancient World</h1>
+
+<body>
+
+  <h1>The Seven Wonders of the Ancient World</h1>
+
+  <header role="banner">
     <img class="banner" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient city">
     <div class="text">
       <h2 class="time">Remarkable constructions of classical antiquity—lost in time</h2>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </div>
   </header>
-<body>
-  <main>
-  <figure class="temple">
-    <img src="images/temple-of-artemis.jpg" alt="#">
-    <figcaption>
-      <h2>Temple of Artemis</h2>
-      <dl>
-        <dt>Construction:</dt>
-        <dd>Circa 550 BC</dd>
-        <dt>Builders:</dt>
-        <dd>Greeks</dd>
-        <dt>Location:</dt>
-        <dd>Selçuk, Turkey</dd>
-      </dl>
-    </figcaption>
-  </figure>
-  <figure class="colossus">
-    <img src="images/colossus-of-rhodes.jpg" alt="#">
-    <figcaption>
-      <h2>Colossus of Rhodes</h2>
-      <dl>
-        <dt>Construction:</dt>
-        <dd>292–280 BC</dd>
-        <dt>Builders:</dt>
-        <dd>Greeks</dd>
-        <dt>Location:</dt>
-        <dd>Rhodes, Greece</dd>
-      </dl>
-    </figcaption>
-  </figure>
-  <figure class="gardens">
-    <img src="images/hanging-gardens-of-babylon.jpg" alt="#">
-    <figcaption>
-      <h2>Gardens of Babylon</h2>
-      <dl>
-        <dt>Construction:</dt>
-        <dd>Circa 600 BC</dd>
-        <dt>Builders:</dt>
-        <dd>Babylonians</dd>
-        <dt>Location:</dt>
-        <dd>Nineveh, Iraq</dd>
-      </dl>
-    </figcaption>
-  </figure>
+
+  <main role="main">
+
+    <figure class="temple">
+      <img class="img-one" src="images/temple-of-artemis.jpg" alt="#">
+      <figcaption>
+        <h2>Temple of Artemis</h2>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
+        </dl>
+      </figcaption>
+    </figure>
+
+    <figure class="colossus">
+      <img class="img-two" src="images/colossus-of-rhodes.jpg" alt="#">
+      <figcaption>
+        <h2>Colossus of Rhodes</h2>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>292–280 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Rhodes, Greece</dd>
+        </dl>
+      </figcaption>
+    </figure>
+
+    <figure class="gardens">
+      <img class="img-three" src="images/hanging-gardens-of-babylon.jpg" alt="#">
+      <figcaption>
+        <h2>Gardens of Babylon</h2>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Babylonians</dd>
+          <dt>Location:</dt>
+          <dd>Nineveh, Iraq</dd>
+        </dl>
+      </figcaption>
+    </figure>
   </main>
 </body>
 </html>
